# os2display_folder_sync

./: .gitignore  README.md  pyproject.toml
src/os2display_folder_sync/: __main__.py  folder_check.py  os2display_api.py  process_file.py
src/tests/: test_display_api.py  test_folder_check.py
