[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os2display-folder-sync"
version = "0.1.0"
description = ""
authors = [{name = "ITK Dev", email = "itk-rpa@mkb.aarhus.dk"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []