[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "os2display_folder_sync"
version = "0.1.0"
description = ""
authors = [{name = "ITK Dev", email = "itk-rpa@mkb.aarhus.dk"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "watchdog == 6.0.0",
    "requests == 2.*",
    "dotenv"
]
